src/Base/main/default/objects/EcwidAPI__mdt/EcwidAPI__mdt.object-meta.xml
<CustomObject>
    <label>EcwidAPI</label>
    <pluralLabel>EcwidAPIs</pluralLabel>
</CustomObject>