src/Base/main/default/objects/EcwidAPI__mdt/fields/Ecwid_API_Setting__c.field-meta.xml
<CustomField>
    <fullName>Ecwid_API_Setting__c</fullName>
    <label>Ecwid API Setting</label>
    <referenceTo>Ecwid_API_Setting__mdt</referenceTo>
    <relationshipLabel>EcwidAPIs</relationshipLabel>
    <relationshipName>EcwidAPIs</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>