src/Base/main/default/objects/EcwidAPI__mdt/fields/Require_Public_Key__c.field-meta.xml
<CustomField>
    <fullName>Require_Public_Key__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Require Public Key</label>
    <type>Checkbox</type>
</CustomField>