src/Base/main/default/objects/EcwidAPI__mdt/fields/Require_Secret_Key__c.field-meta.xml
<CustomField>
    <fullName>Require_Secret_Key__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Require Secret Key</label>
    <type>Checkbox</type>
</CustomField>